# static-analysis

./: .gitignore  .lycheeignore  .travis.yml  AGENTS.md  CONTRIBUTING  CONTRIBUTING.md  Grad Proj  KeePass  LICENSE  Makefile  README.md  mkdocs.yml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: --suggest-tool.yaml  new-issue.md
.github/workflows/: auto-merge.yml  check_links.yml  ci.yml  links.yml  pr-check.yml  pr-comment.yml  render.yml  rust.yml  stale.yml  stats.yml
ci/: Cargo.toml  README.md
ci/pr-check/: Cargo.toml
ci/pr-check/src/: main.rs
ci/pr-check/templates/: comment.md
ci/render/: Cargo.toml
ci/render/src/: lib.rs  types.rs
ci/render/templates/: README.md
ci/src/: lib.rs
data/: .gitignore  README.md  categories.yml  data.yml  languages.yml  other.yml  tags.yml  tools.yml
data/api/: .gitignore  README.md  stats.json  stats_raw.json  tags.json  tools.json
data/api/stats/: tags.json  tools.json
data/pr-check/: Cargo.toml
data/pr-check/src/: main.rs
data/render/: Cargo.toml  clippy.toml
data/render/src/: lib.rs  lints.rs  main.rs  render.rs  stats.rs  types.rs
data/render/src/templates/: README.md
data/render/templates/: README.md
data/tools/: AgentShield.yml  CodeHawk.yml  Credential-Digger  GauntletCI.yml  Meziantou.Analyzer.yml  NAAb.yml  Pixee-py.yml  Pixee.yml  SonarAnalyzer.CSharp.yml  StaticReviewer  Verilator.yml  abaplint.yml  abapopenchecks.yml  actionlint.yml  active-record-doctor.yml  aether.yml  after-the-deadline.yml  ale.yml  alex.yml  aligncheck.yml  alquitran.yml  ameba.yml  anchore.yml  android-lint-summary.yml  android-lint.yml  android-studio.yml  angr.yml  angular-eslint.yml  ansible-lint.yml  appchecker.yml  application-inspector.yml  applicationinspector.yml  appscan-source.yml  appscreener.yml  archunit.yml  archunitnet.yml  arkitect.yml  asqav.yml  ast-grep.yml  astre.yml  (+805 more)
restructure/: index.js  package-lock.json  package.json
