[workspace]
members = [
    "render",
    "pr-check",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
askama = "0.12"
chrono = { version = "0.4", features = ["serde"] }
pico-args = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }