[package]
name = "render"
version = "0.2.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2018"

[dependencies]
serde = "1.0.217"
serde_derive = "1.0.136"
serde_yaml = "0.9.34"
askama = "0.12.1"
# Switch back to crates as soon as a new release with tokio 1.x support is
# released. See https://github.com/softprops/hubcaps/pull/285
hubcaps = { git="https://github.com/softprops/hubcaps" }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.39"
anyhow = "1.0.95"
pico-args = "0.5.0"
serde_json = "1.0.135"
slug = "0.1.6"
